--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "jsx": "react-jsx",
     "sourceMap": true,
     "outDir": "./dist",
-    "strict": true ,
+    "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true
   }
 }
