--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
-    "electron-store": "^5.2.0",
-    "json-schema-typed": "^7.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-router-dom": "^6.0.2",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
