--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/electron-devtools-installer": "2.2.0",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
-    "@types/styled-components": "5.1.10",
+    "@types/styled-components": "^5.1.10",
     "babel-loader": "8.2.2",
     "cross-env": "^7.0.3",
     "electron": "13.1.2",
@@ -54,7 +54,6 @@
         "icon": "assets/icon",
         "extraResource": [
           "assets",
-          "themes",
           "configs"
         ]
       },
