--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "organizador-arquivos",
   "author": "Miguel da Penha",
-  "version": "1.0.0",
-  "description": "An Electron boilerplate including TypeScript, React, Jest and ESLint.",
+  "version": "1.0.1",
+  "description": "Organizador de arquivos",
   "main": "./.webpack/main/index.js",
   "scripts": {
     "start": "cross-env NODE_DEVELOPMENT='development' electron-forge start",
-    "package": "electron-forge package && node build.js",
+    "package": "electron-forge package",
     "make": "electron-forge make",
     "release": "electron-forge publish"
   },
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
